--- a/LepackOne.Site/Views/umbLayout.cshtml
+++ b/LepackOne.Site/Views/umbLayout.cshtml
@@ -1,6 +1,10 @@
 ﻿@inherits UmbracoTemplatePage
+@using ClientDependency.Core.Mvc;
 @{
     Layout = null;
+
+
+
 }<!DOCTYPE html>
 <!--
     TXT 2.0 by HTML5 UP
@@ -14,6 +18,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700|Open+Sans+Condensed:700" rel="stylesheet" />
+    @Html.RenderJsHere()
     <script src="/js/jquery.min.js"></script>
     <script src="/js/config.js"></script>
     <script src="/js/skel.min.js"></script>
